--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,15 +1,36 @@
-<h1>Games#new</h1>
-<p>Find me in app/views/games/new.html.erb</p>
+<section class="hero is-success">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        ゲーム記事作成
+      </h1>
+    </div>
+  </div>
+</section>
 
-<%= form_with model: @game do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  
-  <%= f.label :body %>
-  <%= f.text_area :body %>
-  
-  <%= f.label :image %>
-  <%= f.attachment_field :image %>
-  
-  <%= f.submit %>
-<% end %>
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-6">
+        <%= form_with model: @game do |f| %>
+          <div class="field">
+            <%= f.label :title, "ゲーム名", class: "label" %>
+            <%= f.text_field :title, class: "input" %>
+          </div>
+          
+          <div class="field">
+            <%= f.label :body, "楽しみ方", class: "label" %>
+            <%= f.text_area :body, class: "textarea" %>
+          </div>
+          
+          <div class="field">
+            <%= f.label :image, "写真", class: "label" %>
+            <%= f.attachment_field :image, class: "input" %>
+          </div>
+          
+          <%= f.submit "投稿", class: "button is-success" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</section>
