--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -1,12 +1,36 @@
-<%= form_with model: @game do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  
-  <%= f.label :body %>
-  <%= f.text_area :body %>
-  
-  <%= f.label :image %>
-  <%= f.attachment_field :image %>
-  
-  <%= f.submit %>
-<% end %>
+<section class="hero is-success">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        記事編集
+      </h1>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-6">
+        <%= form_with model: @game do |f| %>
+          <div class="field">
+            <%= f.label :title, "ゲーム名", class: "label" %>
+            <%= f.text_field :title, class: "input" %>
+          </div>
+          
+          <div class="field">
+            <%= f.label :body, "ゲーム説明", class: "label" %>
+            <%= f.text_area :body, class: "textarea" %>
+          </div>
+          
+          <div class="field">
+            <%= f.label :image, "画像", class: "label" %>
+            <%= f.attachment_field :image, class: "input" %>
+          </div>
+          
+          <%= f.submit "更新", class: "button is-success" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</section>
