ゲーム一覧ページ作成

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Games#index</h1>
-<p>Find me in app/views/games/index.html.erb</p>
+<section class="hero is-success">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        ゲーム一覧
+      </h1>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
+    <div class="columns is-multiline">
+      <% @games.each do |game| %>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <%= link_to game_path(game) do %>
+                  <%= attachment_image_tag game, :image %>
+                <% end %>
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-48x48">
+                    <%= link_to user_path(game.user) do %>
+                      <%= attachment_image_tag game.user, :profile_image, fallback: "no-image.png", class: "profile_image" %>
+                    <% end %>
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <div class="title"><%= link_to game.user.username, user_path(game.user) %></div>
+                </div>
+              </div>
+              
+              <div class="content">
+                <time><%= game.updated_at.strftime("%Y-%m-%d %H:%M") %></time>更新
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</section>
