--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -87,7 +87,7 @@
 <!--                </div>-->
 <!--              </div>-->
 <!--              <div class="content">-->
-                <time><%#= recipe.updated_at.strftime("%Y-%m-%d %H:%M") %></time>更新
+                <%#= recipe.updated_at.strftime("%Y-%m-%d %H:%M") %>
 <!--              </div>-->
 <!--            </div>-->
 <!--          </div>-->
