--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,39 +38,48 @@
       <% if user_signed_in? %>
         <div id="navbarExampleTransparentExample" class="navbar-menu">
           <div class="navbar-item">
+            <%= link_to "ゲーム一覧", games_path, class: "navbar-item button is-warning is-light" %>
           </div>
-            <div class="navbar-end">
-              <div class="navbar-item">
-                <div class="field is-grouped">
-                  <p class="control">
-                    <%= link_to "ユーザー一覧", users_path, class: "button is-warning is-light" %>
-                  </p>
-                  <p class="control">
-                    <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "button is-warning is-light" %>
-                  </p>
-                </div>
+          <div class="navbar-item">
+            <%= link_to "新規投稿", new_game_path, class: "navbar-item button is-warning is-light" %>
+          </div>
+          <div class="navbar-end">
+            <div class="navbar-item">
+              <div class="field is-grouped">
+                <p class="control">
+                  <%= link_to "ユーザー一覧", users_path, class: "button is-warning is-light" %>
+                </p>
+                <p class="control">
+                  <%= link_to "マイページ", user_path(current_user), class: "button is-warning is-light" %>
+                </p>
+                <p class="control">
+                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "button is-warning is-light" %>
+                </p>
               </div>
             </div>
+          </div>
         </div>
       <% else %>
         <div id="navbarExampleTransparentExample" class="navbar-menu">
           <div class="navbar-item">
+            <%= link_to "ゲーム一覧", games_path, class: "navbar-item button is-warning is-light" %>
           </div>
-            <div class="navbar-end">
-              <div class="navbar-item">
-                <div class="field is-grouped">
-                  <p class="control">
-                    <%= link_to "ユーザー一覧", users_path, class: "button is-warning is-light" %>
-                  </p>
-                  <p class="control">
-                    <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-light" %>
-                  </p>
-                  <p class="control">
-                    <%= link_to "新規登録", new_user_registration_path, class: "button is-warning is-light" %>
-                  </p>
-                </div>
+          <div class="navbar-item">
+            <%= link_to "ユーザー一覧", users_path, class: "navbar-item button is-warning is-light" %>
+          </div>
+          <div class="navbar-end">
+            <div class="navbar-item">
+              <div class="field is-grouped">
+                <p class="control">
+                  <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-light" %>
+                </p>
+                <p class="control">
+                  <%= link_to "新規登録", new_user_registration_path, class: "button is-warning is-light" %>
+                </p>
               </div>
             </div>
+          </div>
+        </div>
       <% end %>
     </nav>
     <%= yield %>
