--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
       <div class="column is-8">
         <div class="columns is-centered">
           <div class="column is-4">
-            <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
+            <figure class="image is-128x128" style="margin-left: auto; margin-right: auto;">
               <%= attachment_image_tag @user, :profile_image, fallback: "no-image.png", class: "profile_image is-rounded" %>
             </figure>
           </div>
@@ -48,9 +48,49 @@
   </div>
 </section>
 
-<% @user.games.each do |game| %>
-  <%= attachment_image_tag game, :image %>
-  <%= link_to "詳細", game_path(game) %>
-  <%= link_to "編集", edit_game_path(game) %>
-  <%= link_to "削除", game_path(game), method: :delete, data: {confirm: "削除しますか？"} %>
-<% end %>
+<section class="section">
+  <div class="container">
+    <div class="columns is-multiline">
+      <% @user.games.each do |game| %>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <%= attachment_image_tag game, :image %>
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="media">
+                <div class="media-content">
+                  <%= link_to game_path(game), class: "panel-block" do %>
+                    <span class="panel-icon">
+                      <i class="fas fa-book" aria-hidden="true"></i>
+                    </span>
+                    ゲーム詳細を見る
+                  <% end %>
+                  <%if @user == current_user %>
+                    <%= link_to edit_game_path(game), class: "panel-block" do %>
+                      <span class="panel-icon">
+                        <i class="fas fa-edit"></i>
+                      </span>
+                      編集する
+                    <% end %>
+                    <%= link_to game_path(game), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
+                      <span class="panel-icon">
+                        <i class="fas fa-trash"></i>
+                      </span>
+                      削除する
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
+              <div class="content">
+                <time><%= game.updated_at.strftime("%Y-%m-%d %H:%M") %></time>更新
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</section>
