--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -8,6 +8,17 @@
   </div>
 </section>
 
+<% if @game.errors.any? %>
+  <div class="notification is-danger">
+    <h2><%= pluralize(@game.errors.count, "error") %> prohibited this object from being saved: not successfully</h2>
+    <ul>
+      <% @game.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
@@ -17,17 +28,17 @@
             <%= f.label :title, "ゲーム名", class: "label" %>
             <%= f.text_field :title, class: "input" %>
           </div>
-          
+
           <div class="field">
             <%= f.label :body, "楽しみ方", class: "label" %>
             <%= f.text_area :body, class: "textarea" %>
           </div>
-          
+
           <div class="field">
             <%= f.label :image, "写真", class: "label" %>
             <%= f.attachment_field :image, class: "input" %>
           </div>
-          
+
           <%= f.submit "投稿", class: "button is-success" %>
         <% end %>
       </div>
